Show thumbnail of select image.(work on Firefox/Chrome/Opera)

--- a/plugins/UploadPrefs/tmpl/blog_config_upload_prefs.tmpl
+++ b/plugins/UploadPrefs/tmpl/blog_config_upload_prefs.tmpl
@@ -1,9 +1,7 @@
 <mtapp:setting
   id="upload_folder_base"
   label="<__trans phrase="Upload Folder Base">"
-  label_class="uploaderprefs-text-setting"
   hint="<__trans phrase="A folder within the site root to place your assets (eg assets/).">"
-  required="0"
   show_hint="1">
     <input type="text" name="upload_folder_base" id="upload_folder_base" 
        value="<mt:var name="upload_folder_base">" />
@@ -12,9 +10,8 @@
 <mtapp:setting
   id="name_of_siteroot"
   label="<__trans phrase="Name of Site Root">"
-  label_class="uploaderprefs-text-setting"
-  required="0"
-  show_hint="0">
+  hint="<__trans phrase="Change text of &quot;Site Root&quot; in display.">"
+  show_hint="1">
     <input type="text" name="name_of_siteroot" id="name_of_siteroot" 
        value="<mt:var name="name_of_siteroot">" />
 </mtapp:setting>
@@ -22,32 +19,35 @@
 <mtapp:setting
   id="date_based_default"
   label="<__trans phrase="Remove date-based folder option">"
-  label_class="uploaderprefs-checkbox"
   hint="<__trans phrase="Check this box to Remove date-based directory appear.">"
-  required="0"
   show_hint="1">
     <input type="checkbox" name="date_based_default" id="date_based_default" 
        value="1" <mt:if name="date_based_default"> checked="checked"</mt:if /> />
 </mtapp:setting>
 
 <mtapp:setting
+  id="ignore_root_path"
+  label="<__trans phrase="Disabled Upload Site Root">"
+  hint="<__trans phrase="Check this box to Never Upload Site Root.">"
+  show_hint="1">
+    <input type="checkbox" name="ignore_root_path" id="ignore_root_path" 
+       value="1" <mt:if name="ignore_root_path"> checked="checked"</mt:if /> />
+</mtapp:setting>
+
+<mtapp:setting
   id="change_path_disabled"
   label="<__trans phrase="Disabled for user change upload path.">"
-  label_class="uploaderprefs-checkbox"
-  hint="<__trans phrase="Check this box to for user won't change upload path.">"
-  required="0"
+  hint="<__trans phrase="Check this box to User won't change upload path.">"
   show_hint="1">
     <input type="checkbox" name="change_path_disabled" id="change_path_disabled" 
        value="1" <mt:if name="change_path_disabled"> checked="checked"</mt:if /> />
 </mtapp:setting>
 
 <mt:ignore><mtapp:setting
-  id="ignore_admin"
-  label="<__trans phrase="Disabled for user change upload path.">"
-  label_class="uploaderprefs-checkbox"
-  hint="<__trans phrase="Check this box to for Admin will change upload path.">"
-  required="0"
+  id="admin_only"
+  label="<__trans phrase="Enabled for admin change upload path.">"
+  hint="<__trans phrase="Check this box to Admin will change upload path.">"
   show_hint="1">
-    <input type="checkbox" name="ignore_admin" id="ignore_admin" 
-       value="1" <mt:if name="ignore_admin"> checked="checked"</mt:if /> />
+    <input type="checkbox" name="admin_only" id="admin_only" 
+       value="1" <mt:if name="admin_only"> checked="checked"</mt:if /> />
 </mtapp:setting></mt:ignore>
