update hint of plugin setting.

--- a/plugins/UploadPrefs/tmpl/blog_config_upload_prefs.tmpl
+++ b/plugins/UploadPrefs/tmpl/blog_config_upload_prefs.tmpl
@@ -1,7 +1,7 @@
 <mtapp:setting
   id="upload_folder_base"
   label="<__trans phrase="Upload Folder Base">"
-  hint="<__trans phrase="A folder within the site root to place your assets (eg assets/).">"
+  hint="<__trans phrase="A folder within the site root to place your assets (eg assets/ or images/%Y/%m/).">"
   show_hint="1">
     <input type="text" name="upload_folder_base" id="upload_folder_base" 
        value="<mt:var name="upload_folder_base">" />
